--- a/Japan/index.html
+++ b/Japan/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-wrapper">
+        <div class="wrapper">
             <div class="header-logo">
                 <a href="/" class="header-logo-link">
                     <img src="img/svg/odigo-logo.svg" alt="logo">
@@ -36,7 +36,21 @@
     </header>
     <main class="main">
        <section class="intro">
-явы
+            <div class="wrapper">
+                <div class="intro-wrapper">
+                <h1 class="intro-title">Discover Amazing places in Japan</h1>
+                <p class="intro-info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door. </p>
+                <form class="intro-form">
+                    <fieldset class="intro-search_form">
+                        <div class="serch-wrapper">
+                            <input type="text" class="search-field" placeholder="What would you like to do?">
+                            <input type="text" class="search-field" placeholder="Where would you like to go?">
+                            <button class="search-button" type="submit">SEARCH</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
        </section>
     </main>
 </body>
