--- a/Japan/index.html
+++ b/Japan/index.html
@@ -43,12 +43,23 @@
                 <form class="intro-form">
                     <fieldset class="intro-search_form">
                         <div class="serch-wrapper">
-                            <input type="text" class="search-field" placeholder="What would you like to do?">
-                            <input type="text" class="search-field" placeholder="Where would you like to go?">
+                            <input type="text" name="uzer_like_to_do" class="search-field" placeholder="What would you like to do?">
+                            <input type="text" name="uzer_like_to_go" class="search-field" placeholder="Where would you like to go?">
                             <button class="search-button" type="submit">SEARCH</button>
                         </div>
                     </fieldset>
                 </form>
+            </div>
+        </div>
+       </section>
+
+       <section class="benefits">
+        <div class="benefits_wrapper">
+            <h2 class="benefits_title">Benefits of Odigo</h2>
+            <div class="benefits_cards">
+                <div class="benefits_card"></div>
+                <div class="benefits_card"></div>
+                <div class="benefits_card"></div>
             </div>
         </div>
        </section>
