add benefits cards

--- a/Japan/index.html
+++ b/Japan/index.html
@@ -57,9 +57,39 @@
         <div class="benefits_wrapper">
             <h2 class="benefits_title">Benefits of Odigo</h2>
             <div class="benefits_cards">
-                <div class="benefits_card"></div>
-                <div class="benefits_card"></div>
-                <div class="benefits_card"></div>
+                <div class="benefits_card">
+                    <img src="../Japan/img/odigo-icon.png" alt="odigo" class="benefits_img">
+                    <p class="benefit_title">Welcome to Odigo!</p>
+                    <p class="benefit_info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                    <div class="benefits_learn">
+                        <a href="" class="benefit_learn">LEARN MORE</a>
+                        <a href="" class="benefit_arrow">
+                            <img src="../Japan/img/svg/shape.svg" alt="arrow" class="arrow">
+                        </a>
+                    </div>
+                </div>
+                <div class="benefits_card">
+                    <img src="../Japan/img/guide-icon.png" alt="guide" class="benefits_img">
+                    <p class="benefit_title">Your Personal Japan Guide</p>
+                    <p class="benefit_info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                    <div class="benefits_learn">
+                        <a href="" class="benefit_learn">LEARN MORE</a>
+                        <a href="" class="benefit_arrow">
+                            <img src="../Japan/img/svg/shape.svg" alt="arrow" class="arrow">
+                        </a>
+                    </div>
+                </div>
+                <div class="benefits_card">
+                    <img src="../Japan/img/businesses-icon.png" alt="businesses" class="benefits_img">
+                    <p class="benefit_title">Promoting Local Businesses</p>
+                    <p class="benefit_info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                    <div class="benefits_learn">
+                        <a href="" class="benefit_learn">LEARN MORE</a>
+                        <a href="" class="benefit_arrow">
+                            <img src="../Japan/img/svg/shape.svg" alt="arrow" class="arrow">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
        </section>
