--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="benefits_title">Benefits of Odigo</h2>
             <div class="benefits_cards">
                 <div class="benefits_card">
-                    <img src="../Japan/img/odigo-icon.png" alt="odigo" class="benefits_img">
+                    <img src="/img/odigo-icon.png" alt="odigo" class="benefits_img">
                     <p class="benefit_title">Welcome to Odigo!</p>
                     <p class="benefit_info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
                     <div class="benefits_learn">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="benefits_card">
-                    <img src="../Japan/img/guide-icon.png" alt="guide" class="benefits_img">
+                    <img src="/img/guide-icon.png" alt="guide" class="benefits_img">
                     <p class="benefit_title">Your Personal Japan Guide</p>
                     <p class="benefit_info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
                     <div class="benefits_learn">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="benefits_card">
-                    <img src="../Japan/img/businesses-icon.png" alt="businesses" class="benefits_img">
+                    <img src="/img/businesses-icon.png" alt="businesses" class="benefits_img">
                     <p class="benefit_title">Promoting Local Businesses</p>
                     <p class="benefit_info">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
                     <div class="benefits_learn">
