--- a/index.html
+++ b/index.html
@@ -96,12 +96,48 @@
                         </div>
                     </div>    
                 </div>
-                <div class="travel_prefecture">
+                <div class="places-cards">
 
+                   <figure class="places-card places-card-lg">
+                     <img src="/img/pref1.jpg" alt="Mount Fuji" class="places-card-pic">   
+                     <figcaption class="places-card-title">Mount Fuji</figcaption>
+                     <a href="#!" class="places-card-link"></a>
+                   </figure>
+
+                   <figure class="places-card places-card-lg">
+                     <img src="/img/pref2.jpg" alt="Kyoto" class="places-card-pic">
+                     <figcaption class="places-card-title">Kyoto</figcaption>
+                     <a href="#!" class="places-card-link"></a>
+                   </figure>
+
+                   <figure class="places-card places-card-sm">
+                    <img src="/img/pref3.jpg" alt="Tokyo" class="places-card-pic">
+                    <figcaption class="places-card-title">Tokyo</figcaption>
+                    <a href="#!" class="places-card-link"></a>
+                  </figure>
+
+                  <figure class="places-card places-card-sm">
+                    <img src="/img/pref4.jpg" alt="Niigata" class="places-card-pic">
+                    <figcaption class="places-card-title">Niigata</figcaption>
+                    <a href="#!" class="places-card-link"></a>
+                  </figure>
+
+                  <figure class="places-card places-card-sm">
+                    <img src="/img/pref5.jpg" alt="Sapporo" class="places-card-pic">
+                    <figcaption class="places-card-title">Sapporo</figcaption>
+                    <a href="#!" class="places-card-link"></a>
+                  </figure>
+                  
                 </div>
             </div>
+
+
+
+
+
+
             <div class="travel_places">
-                <h2 class="travel_title"></h2>
+                <h2 class="travel_title">Today top places to visit</h2>
             </div>
         </div>
        </section>
