--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
             <div class="travel_places">
-                <h2 class="travel_title">Today top places to visit</h2>
+                <h2 class="travel_title">Today top places to </h2>
             </div>
         </div>
        </section>
