--- a/index.html
+++ b/index.html
@@ -99,25 +99,25 @@
                 <div class="places-cards">
 
                    <figure class="places-card places-card-lg">
-                     <img src="/img/pref1.jpg" alt="Mount Fuji" class="places-card-pic">   
+                     <img src="./img/pref1.jpg" alt="Mount Fuji" class="places-card-pic">   
                      <figcaption class="places-card-title">Mount Fuji</figcaption>
                      <a href="#!" class="places-card-link"></a>
                    </figure>
 
                    <figure class="places-card places-card-lg">
-                     <img src="/img/pref2.jpg" alt="Kyoto" class="places-card-pic">
+                     <img src="../img/pref2.jpg" alt="Kyoto" class="places-card-pic">
                      <figcaption class="places-card-title">Kyoto</figcaption>
                      <a href="#!" class="places-card-link"></a>
                    </figure>
 
                    <figure class="places-card places-card-sm">
-                    <img src="/img/pref3.jpg" alt="Tokyo" class="places-card-pic">
+                    <img src="../img/pref3.jpg" alt="Tokyo" class="places-card-pic">
                     <figcaption class="places-card-title">Tokyo</figcaption>
                     <a href="#!" class="places-card-link"></a>
                   </figure>
 
                   <figure class="places-card places-card-sm">
-                    <img src="/img/pref4.jpg" alt="Niigata" class="places-card-pic">
+                    <img src="./img/pref4.jpg" alt="Niigata" class="places-card-pic">
                     <figcaption class="places-card-title">Niigata</figcaption>
                     <a href="#!" class="places-card-link"></a>
                   </figure>
