--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                   <figure class="places-card places-card-sm">
                     <img src="/img/pref5.jpg" alt="Sapporo" class="places-card-pic">
-                    <figcaption class="places-card-title">Sapporo</figcaption>
+                    <figcaption class="places-card-title">Sappor</figcaption>
                     <a href="#!" class="places-card-link"></a>
                   </figure>
                   
