--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   </figure>
 
                   <figure class="places-card places-card-sm">
-                    <img src="/img/pref5.jpg" alt="Sapporo" class="places-card-pic">
+                    <img src="/img/pref5.jpg" alt="Sappor" class="places-card-pic">
                     <figcaption class="places-card-title">Sappor</figcaption>
                     <a href="#!" class="places-card-link"></a>
                   </figure>
