--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="/img/Flag_of_Japan.jpg" type="image/png">
+    <link rel="shortcut icon" href="./img/Flag_of_Japan.jpg" type="image/png">
     <title>TR Japan</title>
 </head>
 <body>
@@ -105,7 +105,7 @@
                    </figure>
 
                    <figure class="places-card places-card-lg">
-                     <img src="../img/pref2.jpg" alt="Kyoto" class="places-card-pic">
+                     <img src="./img/pref2.jpg" alt="Kyoto" class="places-card-pic">
                      <figcaption class="places-card-title">Kyoto</figcaption>
                      <a href="#!" class="places-card-link"></a>
                    </figure>
@@ -123,8 +123,8 @@
                   </figure>
 
                   <figure class="places-card places-card-sm">
-                    <img src="/img/pref5.jpg" alt="Sappor" class="places-card-pic">
-                    <figcaption class="places-card-title">Sappor</figcaption>
+                    <img src="./img/pref5.jpg" alt="Sapporo" class="places-card-pic">
+                    <figcaption class="places-card-title">Sapporo</figcaption>
                     <a href="#!" class="places-card-link"></a>
                   </figure>
                   
