--- a/index.html
+++ b/index.html
@@ -130,14 +130,47 @@
                   
                 </div>
             </div>
-
-
-
-
-
+            <div class="toure-cards">
+                <div class="toure toure-c">
+                    <div class="toure-pic">
+                        <img src="./img/toure1.jpg" alt="toure1" class="toure-p">
+                    </div>
+                    <div class="toure-description">
+                        <h2 class="toure-title">Prefecture in Focus: Tottori</h2>
+                        <p class="toure-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door. </p>
+                        <a href="#!" class="toure-link">VIEW PREFECTURE</a>
+                    </div>
+                </div>
+                <div class="toure">
+                    <div class="toure-description">
+                        <h2 class="toure-title">Featured Neighborhood: Kyoto’s Arashiyama</h2>
+                        <p class="toure-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door. </p>
+                        <a href="#!" class="toure-link">VIEW NEIGHBORHOOD</a>
+                    </div>
+                    <div class="toure-pic">
+                        <img src="./img/toure2.jpg" alt="toure2" class="toure-p">
+                    </div>
+                </div>
+            </div>
 
             <div class="travel_places">
-                <h2 class="travel_title">Today top places to </h2>
+                <section class="top">
+                    <h2 class="travel_title top-title">Today top places to </h2>
+                    <div class="top-cards">
+                        <div class="top-card">
+                            <img src="./img/top1.jpg" alt="NAGOYA" class="top-card-pic">
+                              <div class="top-card-stats">
+                                <h3 class="top-card-stats-title">NAGOYA</h3>
+                                <div class="top-card-stats-likes">
+                                    <span class="likes-stats">221</span>  
+                                </div>
+                                <div class="top-card-stats-comments">
+                                    <span class="comment-stats">55</span>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
        </section>
