--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
 
             <div class="travel_places">
                 <section class="top">
-                    <h2 class="travel_title top-title">Today top places to </h2>
+                    <h2 class="travel_title top-title">Today top places to visit</h2>
                     <div class="top-cards">
                         <div class="top-card">
+                            <div class="top-card-picture">
                             <img src="./img/top1.jpg" alt="NAGOYA" class="top-card-pic">
                               <div class="top-card-stats">
                                 <h3 class="top-card-stats-title">NAGOYA</h3>
@@ -167,7 +168,90 @@
                                 <div class="top-card-stats-comments">
                                     <span class="comment-stats">55</span>
                                 </div>
-                              </div>
+                             </div>
+                            </div>
+                                <p class="top-card-description">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                                <a href="#!" class="top-card-link">SEE MORE</a>
+                        </div>
+                        <div class="top-card">
+                            <div class="top-card-picture">
+                            <img src="./img/top2.jpg" alt="NIIGATA" class="top-card-pic">
+                              <div class="top-card-stats">
+                                <h3 class="top-card-stats-title">NIIGATA</h3>
+                                <div class="top-card-stats-likes">
+                                    <span class="likes-stats">146</span>  
+                                </div>
+                                <div class="top-card-stats-comments">
+                                    <span class="comment-stats">28</span>
+                                </div>
+                             </div>
+                            </div>
+                                <p class="top-card-description">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                                <a href="#!" class="top-card-link">SEE MORE</a>
+                        </div>
+                        <div class="top-card">
+                            <div class="top-card-picture">
+                            <img src="./img/top3.jpg" alt="OSAKA" class="top-card-pic">
+                              <div class="top-card-stats">
+                                <h3 class="top-card-stats-title">OSAKA</h3>
+                                <div class="top-card-stats-likes">
+                                    <span class="likes-stats">188</span>  
+                                </div>
+                                <div class="top-card-stats-comments">
+                                    <span class="comment-stats">62</span>
+                                </div>
+                             </div>
+                            </div>
+                                <p class="top-card-description">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                                <a href="#!" class="top-card-link">SEE MORE</a>
+                        </div>
+                        <div class="top-card">
+                            <div class="top-card-picture">
+                            <img src="./img/top4.jpg" alt="SAITAMA" class="top-card-pic">
+                              <div class="top-card-stats">
+                                <h3 class="top-card-stats-title">SAITAMA</h3>
+                                <div class="top-card-stats-likes">
+                                    <span class="likes-stats">241</span>  
+                                </div>
+                                <div class="top-card-stats-comments">
+                                    <span class="comment-stats">72</span>
+                                </div>
+                             </div>
+                            </div>
+                                <p class="top-card-description">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                                <a href="#!" class="top-card-link">SEE MORE</a>
+                        </div>
+                        <div class="top-card">
+                            <div class="top-card-picture">
+                            <img src="./img/top5.jpg" alt="UENO" class="top-card-pic">
+                              <div class="top-card-stats">
+                                <h3 class="top-card-stats-title">UENO</h3>
+                                <div class="top-card-stats-likes">
+                                    <span class="likes-stats">117</span>  
+                                </div>
+                                <div class="top-card-stats-comments">
+                                    <span class="comment-stats">48</span>
+                                </div>
+                             </div>
+                            </div>
+                                <p class="top-card-description">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                                <a href="#!" class="top-card-link">SEE MORE</a>
+                        </div>
+                        <div class="top-card">
+                            <div class="top-card-picture">
+                            <img src="./img/top6.jpg" alt="SHIBUYA" class="top-card-pic">
+                              <div class="top-card-stats">
+                                <h3 class="top-card-stats-title">SHIBUYA</h3>
+                                <div class="top-card-stats-likes">
+                                    <span class="likes-stats">216</span>  
+                                </div>
+                                <div class="top-card-stats-comments">
+                                    <span class="comment-stats">59</span>
+                                </div>
+                             </div>
+                            </div>
+                                <p class="top-card-description">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
+                                <a href="#!" class="top-card-link">SEE MORE</a>
                         </div>
                     </div>
                 </section>
