--- a/index.html
+++ b/index.html
@@ -20,19 +20,28 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item">
-                            <a href="#!" class="header__link">Articles</a>
+                            <a href="#Search" class="header__link">SEARCH</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Locations</a>
+                            <a href="#Places" class="header__link">PLACES</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Videos</a>
+                            <a href="#Tours" class="header__link">TOURS</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Sign in</a>
+                            <a href="#Video" class="header__link">VIDEO</a>
                         </li>
                     </ul>
+                    <div class="header__close">
+                        <span class="burger__close-line"></span>
+                        <span class="burger__close-line"></span>
+                    </div>
                 </nav>
+                <div class="header__burger burger">
+                    <span class="burger__line line__first"></span>
+                    <span class="burger__line line__second"></span>
+                    <span class="burger__line line__third"></span>
+                </div>
             </div>
         </div>
     </header>
@@ -41,7 +50,7 @@
 
     <main class="main">
         <!-- Intro start -->
-        <section class="intro">
+        <section class="intro" id="Search">
             <div class="wrapper">
                 <h1 class="intro__title">
                     Discover Amazing places in Japan
@@ -117,7 +126,7 @@
         <!-- Benefits end -->   
         
         <!-- Places start -->  
-        <section class="places">
+        <section class="places" id="Places">
             <div class="wrapper-full">
                 <div class="places__caption">
                     <h2 class="places__title section-title">
@@ -175,7 +184,7 @@
 
         <!-- Tours start -->
 
-        <div class="tours">
+        <div class="tours" id="Tours">
             <div class="wrapper-full">
 
                 <div class="tours__tour tour">
@@ -203,7 +212,7 @@
                         </p>
                         <a href="#!" class="tour__more">VIEW PREFECTURE</a>
                     </div>
-                    <div class="tour__pic">
+                    <div class="tour__pic tour__pic_mob_first">
                         <img src="./img/toure2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour__thumb">
                     </div>
                 </div>
@@ -380,7 +389,7 @@
         <!-- Top end -->
 
         <!-- Videos start -->
-        <div class="videos">
+        <div class="videos" id="Video">
             <div class="videos__wrapper">
                 <div class="video__item"></div>
                 <iframe class="video__element" src="https://www.youtube.com/embed/D48T0wNm96w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
