--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item">
-                            <a href="#Search" class="header__link">SEARCH</a>
+                            <a href="#Search" class="header__link js-scroll">SEARCH</a>
                         </li>
                         <li class="header__item">
-                            <a href="#Places" class="header__link">PLACES</a>
+                            <a href="#Places" class="header__link js-scroll">PLACES</a>
                         </li>
                         <li class="header__item">
-                            <a href="#Tours" class="header__link">TOURS</a>
+                            <a href="#Tours" class="header__link js-scroll">TOURS</a>
                         </li>
                         <li class="header__item">
-                            <a href="#Video" class="header__link">VIDEO</a>
+                            <a href="#Video" class="header__link js-scroll">VIDEO</a>
                         </li>
                     </ul>
                     <div class="header__close">
